tests/circuits/invalids/two_same_names.nts
.chipsets:
input   a
input   b
4071    a
output  s
.links:
a:1     or:1
b:1     or:2
or:3    s:1